# p1-reader

./: .dockerignore  .drone.yml  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  obis.json  pyproject.toml
tests/: lines_corrupt.txt  lines_ok.txt  telegram.txt  test_p1-reader.py
