[tool.poetry]
name = "p1-reader"
version = "0.1.0"
description = ""
authors = ["Marco <marco@crapts.org>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.20.0"
paho-mqtt = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
log_level = "INFO"
asyncio_mode = "strict"
